# home

./: .beardist.json  .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Justfile  README.md  TODO.md  depot.json  docker-bake.hcl  multify-2.sh  recipe.json  repack.sh  rust-toolchain.toml  schema.sql
.cargo/: config.toml
.github/workflows/: build.yml
binaries/home-cub/: Cargo.toml
binaries/home-cub/src/: main.rs
binaries/home-doctor/: Cargo.toml
binaries/home-doctor/src/: main.rs
binaries/home-init/: Cargo.toml
binaries/home-init/src/: dev_setup.rs  main.rs
binaries/home-mom/: Cargo.toml
binaries/home-mom/src/: main.rs
binaries/home-serve/: Cargo.toml
binaries/home-serve/src/: main.rs
binaries/home-term/: Cargo.toml
binaries/home-term/src/: main.rs
binaries/home/src/: main.rs
crates/config-types/: Cargo.toml
crates/config-types/src/: lib.rs
crates/conflux/: Cargo.toml
crates/conflux/src/: av.rs  derivations.rs  lib.rs
crates/content-type/: Cargo.toml
crates/content-type/src/: lib.rs
crates/credentials/: Cargo.toml
crates/credentials/src/: lib.rs
crates/cub-types/src/: lib.rs
crates/derivations/: Cargo.toml
crates/derivations/src/: lib.rs
crates/dumbcache/: Cargo.toml
crates/dumbcache/src/: lib.rs
crates/highlight-types/: Cargo.toml
crates/highlight-types/src/: lib.rs
crates/home/: Cargo.toml
crates/home/src/: dev_setup.rs  main.rs
crates/image-types/: Cargo.toml
crates/image-types/src/: lib.rs
crates/inflight/: Cargo.toml
crates/libapi/: Cargo.toml
crates/libapi/src/impls/: mod.rs
crates/libcdn/: Cargo.toml
crates/libcdn/src/impls/: mod.rs
crates/libclap/: Cargo.toml
crates/libcompress/: Cargo.toml
crates/libconfig/: Cargo.toml
crates/libconfig/src/: lib.rs
crates/libcub/: Cargo.toml
crates/libcub/src/impls/: git_auth.rs  graceful_shutdown.rs  mod.rs  mom_event_handler.rs  node_metadata.rs
crates/libcub/src/impls/access_control/: mod.rs
crates/libcub/src/impls/credentials/: mod.rs
crates/libcub/src/impls/cub_req/: mod.rs
crates/libcub/src/impls/layers/: compression.rs  cub_req.rs  domain_redirect.rs  mod.rs
crates/libcub/src/impls/reply/: mod.rs
crates/libcub/src/impls/types/: mod.rs
crates/libcub/src/impls/vite/: mod.rs
crates/libcub/src/impls/web/: login.rs  mod.rs
crates/libcub/src/impls/web/api/: autocomplete.rs  git_token.rs  git_token_get.rs  git_token_usage.md  link_preview.rs  make_api_key.rs  mod.rs  refresh_userinfo.rs  update_userinfo.rs
crates/libcub/src/impls/web/api/admin/: mod.rs
crates/libcub/src/impls/web/internal_api/: deploy.rs  edit_asset.rs  internal_search.rs  media_upload.rs  mod.rs  open_in_editor.rs  validation.rs  write_to_clipboard.rs  ws.rs
crates/libdiscord/: Cargo.toml
crates/libdiscord/src/: lib.rs
crates/libdoctor/: Cargo.toml
crates/liberrhandling/: Cargo.toml
crates/liberrhandling/src/: lib.rs
crates/libfs/: Cargo.toml
crates/libgithub/: Cargo.toml
crates/libgithub/src/: github_sponsors.graphql  github_sponsorship_for_viewer.graphql  lib.rs
crates/libgithub/src/impls/: mod.rs
crates/libhighlight/: Cargo.toml
crates/libhighlight/src/: lib.rs
crates/libhtmlrewrite/: Cargo.toml
crates/libhttpclient/: Cargo.toml
crates/libhttpclient/src/: lib.rs
crates/libimage/: Cargo.toml
crates/libimage/src/: lib.rs
crates/libmarkdown/: Cargo.toml
crates/libmarkdown/src/: impls.rs
crates/libmarkdown/src/snapshots/: libmarkdown__impls__tests__correctness_with_types-2.snap  libmarkdown__impls__tests__correctness_with_types.snap  libmarkdown__impls__tests__home_is_very_opinionated-2.snap  libmarkdown__impls__tests__home_is_very_opinionated.snap  libmarkdown__impls__tests__markdown_1-2.snap  libmarkdown__impls__tests__markdown_1-3.snap  libmarkdown__impls__tests__markdown_1-4.snap  libmarkdown__impls__tests__markdown_1.snap  libmarkdown__impls__tests__markdown_with_code_block-2.snap  libmarkdown__impls__tests__shortblocks-2.snap  (+6 more)
crates/libmath/: Cargo.toml
crates/libmedia/: Cargo.toml
crates/libmom/: Cargo.toml
crates/libmom/src/: impls.rs  lib.rs
crates/libmom/src/impls/: db.rs  deriver.rs  discord_roles.rs  email.rs  endpoints.rs  ffmpeg.rs  ffmpeg_stream.rs  site.rs  sponsors.rs  users.rs
crates/libmom/src/impls/db/: migrations.rs
crates/libmom/src/impls/db/migrations/: m0009_email_login_codes.rs  m0010_users.rs  m0011_avatar_not_thumb.rs  m0011_discord.rs  m0012_users_vs_profiles.rs  m0013_user_gifted_tier.rs  m0014_discord_guild.rs
crates/libmom/src/impls/endpoints/: tenant.rs  tenant_extractor.rs  wip.rs
crates/libmom/src/impls/endpoints/tenant/: derive.rs  email_login.rs  media.rs  opendoor.rs
crates/libmomclient/: Cargo.toml
crates/libmomclient/src/: lib.rs
crates/libobjectstore/: Cargo.toml
crates/libobjectstore/src/: lib.rs
crates/libpatreon/: Cargo.toml
crates/libpatreon/src/: lib.rs  model.rs
crates/libreddit/: Cargo.toml
crates/libreddit/src/: lib.rs
crates/librevision/: Cargo.toml
crates/libsearch/: Cargo.toml
crates/libsearch/src/: lib.rs
crates/libstripe/: Cargo.toml
crates/libstripe/src/: lib.rs
crates/libsvg/: Cargo.toml
crates/libsvg/src/: impls.rs
crates/libtemplate/: Cargo.toml
crates/libtemplate/src/: global_functions_and_filters.rs  lib.rs
crates/libterm/: Cargo.toml
crates/libterm/src/: impls.rs  lib.rs
crates/libtracingsub/: Cargo.toml
crates/libwebpage/: Cargo.toml
crates/libwebpage/src/: lib.rs
crates/libwebsock/: Cargo.toml
crates/libwebsock/src/: lib.rs
crates/mod-markdown/: Cargo.toml
crates/mom-types/: Cargo.toml
crates/mom-types/src/: lib.rs
crates/nerdfonts/: Cargo.toml
crates/objectstore-types/: Cargo.toml
crates/objectstore-types/src/: lib.rs
crates/plait/src/: lib.rs
crates/sentrywrap/: Cargo.toml
crates/sentrywrap/src/: lib.rs
crates/skelly/: Cargo.toml
crates/skelly/src/: lib.rs
crates/template-types/: Cargo.toml
crates/template-types/src/: lib.rs
crates/uffmpeg/: Cargo.toml
docs/: email-logging-summary.md  email-login-backend.md  package.json  pnpm-lock.yaml
docs/content/: setup.md
(+11 files in other folders)
