[workspace]
members = ["binaries/*", "crates/*"]
exclude = []
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Amos Wenger <amos@bearcove.eu>"]
license = "Proprietary"
repository = "https://github.com/bearcove/home"
homepage = "https://home.bearcove.eu"
documentation = "https://home.bearcove.eu"
description = "A cozy authoring environment"
keywords = []
categories = []

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
debug = 1
opt-level = 1
incremental = true

[profile.release]
debug = 1
lto = "off"

[workspace.dependencies]
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
rusqlite = { version = "0.36.0", default-features = false, features = ["time"] }
eyre = "0.6.12"
minijinja = { version = "2.12.0" }
facet = { version = "0.28.3", features = ["camino", "ordered-float", "time"] }
facet-json = { version = "0.28.2" }
facet-pretty = { version = "0.28.0" }
