[package]
name = "home-init"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
camino = "1.1.9"
facet.workspace = true
facet-args = "0.19.13"
fastrand = "2.3.0"
fs-err = { version = "3.1.0", features = ["tokio"] }
serde_json = "1.0.140"
skelly = { version = "0.1.0", path = "../../crates/skelly" }
tokio.workspace = true
