[package]
name = "libcub"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
camino = { version = "1.1.9" }
conflux = { path = "../../crates/conflux" }
libmomclient = { path = "../libmomclient" }
axum = { version = "0.8.4", default-features = false, features = [
    "http1",
    "tokio",
    "ws",
    "query",
    "macros",
    "form",
    "json",
] }
tokio = { workspace = true, features = ["full"] }
tower = { version = "0.5.2", features = ["steer"] }
tower-cookies = { version = "0.11.0", features = ["private"] }
eyre = { workspace = true }
time = { version = "0.3.41", features = ["formatting"] }
parking_lot = { version = "0.12.4" }
url = { version = "2.5.4", features = ["serde"] }
derivations = { path = "../../crates/derivations" }
libsearch = { path = "../libsearch" }
libobjectstore = { path = "../libobjectstore" }
libterm = { path = "../libterm" }
nix = { version = "0.30.1", features = ["process", "signal"] }
http = { version = "1.3.1" }
libcompress = { path = "../libcompress" }
pin-project-lite = { version = "0.2.16" }
rand = { version = "0.9.1" }
strsim = { version = "0.11.1" }
libwebpage = { path = "../libwebpage" }
flume = { version = "0.11.1" }
bytesize = { version = "2.0.1" }
libimage = { path = "../libimage" }
tempfile = { version = "3.20.0" }
uffmpeg = { path = "../../crates/uffmpeg" }
libhttpclient = { version = "0.1.0", path = "../libhttpclient" }
libpatreon = { path = "../libpatreon" }
serde = { workspace = true, features = ["derive"] }
content-type = { path = "../../crates/content-type" }
itertools = { version = "0.14.0" }
closest = { version = "0.1.0", path = "../../crates/closest" }
ulid = { version = "1.2.1" }
liberrhandling = { path = "../liberrhandling" }
credentials = { path = "../../crates/credentials" }
libc = { version = "0.2.172" }
regex = { version = "1.11.1" }
strip-ansi-escapes = { version = "0.2.1" }

hattip = { version = "0.1.0", path = "../../crates/hattip" }
libapi = { version = "0.1.0", path = "../libapi" }
libwebsock = { version = "0.1.0", path = "../libwebsock" }
hyper = { version = "1.6.0", features = ["server", "http1"] }
futures-core = "0.3.31"
cub-types = { version = "0.1.0", path = "../../crates/cub-types" }
futures-util = { version = "0.3.31" }
tempdir = { version = "0.3.7" }
librevision = { version = "0.1.0", path = "../librevision" }
open = { version = "5.3.2" }
libgithub = { version = "0.1.0", path = "../libgithub" }
libcdn = { version = "0.1.0", path = "../libcdn" }
config-types = { version = "0.1.0", path = "../config-types" }
autotrait = "0.2.1"
template-types = { version = "0.1.0", path = "../template-types" }
mom-types = { version = "0.1.0", path = "../mom-types" }
image-types = { version = "0.1.0", path = "../image-types" }
objectstore-types = { version = "0.1.0", path = "../objectstore-types" }
rcgen = "0.13.2"
rustls = "0.23.27"
tokio-rustls = "0.26.2"
arboard = "3.5.0"
fs-err = { version = "3.1.0", features = ["tokio"] }
facet-json.workspace = true
facet.workspace = true
log = "0.4.27"
reqwest = { version = "0.12.18", default-features = false, features = [
    "rustls-tls-native-roots",
] }
owo-colors = "4.2.1"
base64 = "0.22.1"
