[package]
name = "libhighlight"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
# impl dependencies
dumbcache = { path = "../../crates/dumbcache" }
tree-sitter-collection = { git = "https://github.com/bearcove/home-tree-sitter" }
nerdfonts = { path = "../nerdfonts" }
autotrait = "0.2.1"
highlight-types = { version = "0.1.0", path = "../highlight-types" }
eyre.workspace = true
log = "0.4.27"
