[package]
name = "libhttpclient"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
autotrait = "0.2.1"
bytes = "1.10.1"
eyre.workspace = true
facet.workspace = true
facet-json.workspace = true
facet-reflect = "0.27.3"
form_urlencoded = "1.2.1"
futures-core = "0.3.31"
futures-util = "0.3.31"
http = "1.3.1"
reqwest = { version = "0.12.15", default-features = false, features = [
    "rustls-tls-native-roots",
] }
