[package]
name = "libmom"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
camino = { version = "1.1.9" }
conflux = { path = "../../crates/conflux" }
liberrhandling = { path = "../../crates/liberrhandling" }
libobjectstore = { path = "../../crates/libobjectstore" }
libterm = { path = "../../crates/libterm" }
credentials = { path = "../../crates/credentials" }
libpatreon = { path = "../../crates/libpatreon" }
content-type = { path = "../../crates/content-type" }
derivations = { version = "0.1.0", path = "../../crates/derivations" }

# impl deps
axum = { version = "0.8.4", default-features = false, features = [
    "http1",
    "tokio",
    "ws",
    "query",
    "macros",
] }
eyre = { version = "0.6.12", default-features = false }
futures-util = { version = "0.3.31" }
inflight = { path = "../../crates/inflight" }
parking_lot = { version = "0.12.4" }
r2d2 = { version = "0.8.10" }
r2d2_sqlite = { version = "0.29.0" }
rusqlite = { workspace = true, default-features = false, features = [
    "time",
    "trace",
] }
serde = { version = "1.0.219", features = ["derive"] }
time = { version = "0.3.41", features = ["formatting"] }
tokio = { version = "1.45.1", features = ["full"] }
url = { version = "2.5.4" }
tempfile = { version = "3.20.0" }
ffmpeg-sidecar = { version = "2.0.6" }
nix = { version = "0.30.1", features = ["process", "signal"] }
tokio-stream = { version = "0.1.17" }
libimage = { version = "0.1.0", path = "../../crates/libimage" }
uffmpeg = { version = "0.1.0", path = "../../crates/uffmpeg" }
libsvg = { version = "0.1.0", path = "../../crates/libsvg" }
bytesize = { version = "2.0.1" }
futures-core = "0.3.31"
owo-colors = "4.2.1"
itertools = "0.14.0"
libgithub = { version = "0.1.0", path = "../libgithub" }
libhttpclient = { version = "0.1.0", path = "../libhttpclient" }
config-types = { version = "0.1.0", path = "../config-types" }
objectstore-types = { version = "0.1.0", path = "../objectstore-types" }
autotrait = "0.2.1"
mom-types = { version = "0.1.0", path = "../mom-types" }
image-types = { version = "0.1.0", path = "../image-types" }
fs-err = { version = "3.1.0", features = ["tokio"] }
facet-json.workspace = true
facet.workspace = true
log = "0.4.27"
rand = "0.9.2"
