[package]
name = "libstripe"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
eyre.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
log = "0.4"
autotrait = "0.2.1"
futures-core = "0.3"
libhttpclient = { version = "0.1.0", path = "../libhttpclient" }
credentials = { version = "0.1.0", path = "../credentials" }
config-types = { version = "0.1.0", path = "../config-types" }