[package]
name = "libterm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
anstyle-parse = { version = "0.2.6" }
coolor = { version = "1.1.0" }
displaydoc = { version = "0.2.5" }
fs-err = { version = "3.1.0" }
nix = { version = "0.30.1", features = ["process"] }
owo-colors = { version = "4.2.1" }
portable-pty = { version = "0.9.0" }
shell-quote = { version = "0.7.2" }
term_size = { version = "0.3.2" }
termion = { version = "4.0.5" }
which = { version = "7.0.3" }
autotrait = "0.2.1"
facet.workspace = true
log = "0.4.27"
